k8s/pve/loockit/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: loockit
  namespace: app-loockit
spec:
  selector:
    app.kubernetes.io/name: loockit-proxy
  type: ClusterIP
  ports:
    - name: rest
      port: 8080
      targetPort: 8080
    - name: grpc
      port: 50051
      targetPort: 50051
