k8s/pve/loockit/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: loockit-ingress
  namespace: app-loockit
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: loockit
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: cloudflared
          podSelector:
            matchLabels:
              app: cloudflared
      ports:
        - protocol: TCP
          port: 8080
